# strooct

./: CMakeLists.txt  Cargo.toml  LICENSE
include/strooct/: lexer.h  string.h  token.h
src/: debug_main.c  lexer.c  string.c  token.c
src/parsing/: ast.rs  lexer.rs  parser.rs  token.rs
test/: lexer.c  main.c
